--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
         </div>
         <!-- Project 2 -->
         <div class="bg-gray-100 dark:bg-gray-800 p-6 rounded-lg shadow-lg project-card">
-          <img src="assets/images/project2.jpg" alt="Project 2" class="w-full h-32 sm:h-48 object-cover rounded mb-4">
+          <img src="assets/images/ric_faq.png" alt="Project 2" class="w-full h-32 sm:h-48 object-cover rounded mb-4">
           <h3 class="text-xl sm:text-2xl font-semibold mb-2 text-gray-900 dark:text-white">🧠 FAQ Chatbot System</h3>
           <p class="text-gray-900 dark:text-white">Python, HTML/CSS<div>Developed a chatbot to answer student FAQs</div></p>
-          <a href="#" class="text-teal-500 dark:text-teal-300 hover:underline">View Project</a>
+          <a href="https://ric-gaming-club-faq.vercel.app" class="text-teal-500 dark:text-teal-300 hover:underline">View Project</a>
         </div>
       </div>
     </div>
