--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="container mx-auto px-4 xs:px-4 sm:px-6 md:px-8 lg:px-10">
       <h2 class="sticky-title text-lg xs:text-xl sm:text-2xl md:text-3xl lg:text-4xl font-bold text-center mb-4 xs:mb-6 sm:mb-8 md:mb-10 lg:mb-12 text-gray-900 dark:text-white">About Me</h2>
       <div class="flex flex-col items-center max-w-2xl mx-auto gap-3 xs:gap-4 sm:gap-6 md:gap-8 lg:gap-10">
-        <img src="assets/images/profile.jpg" alt="Profile Photo" class="w-20 xs:w-24 sm:w-32 md:w-40 lg:w-48 h-20 xs:h-24 sm:h-32 md:h-40 lg:h-48 rounded-lg object-cover shadow-lg profile-img">
+        <img src="assets/images/Profile.jpg" alt="Profile Photo" class="w-20 xs:w-24 sm:w-32 md:w-40 lg:w-48 h-20 xs:h-24 sm:h-32 md:h-40 lg:h-48 rounded-lg object-cover shadow-lg profile-img">
         <p class="text-xs xs:text-sm sm:text-base md:text-lg lg:text-xl text-center text-gray-900 dark:text-white about-text">Final-year ICT student with hands-on experience in Python programming and currently learning JSON and Django for web development. Gained basic understanding of databases through coursework and projects. Eager to apply practical skills in a real-world internship, with a strong interest in web development and problem-solving.</p>
       </div>
     </div>
